Adding configuration per client using factory pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+#SOFASCORE
+json2pojo.sofascore.packageName.=com.json2pojo.sofascore.teams
+json2pojo.sofascore.baseInputMainPath=src/main/resources
+json2pojo.sofascore.baseOutputPath=src/main/java
+json2pojo.sofascore.baseInputFile=sofascore/maven/team-schema.json
+#FOTMOB
+json2pojo.fotmob.packageName=com.json2pojo.fotmob.player
+json2pojo.fotmob.baseInputMainPath=src/main/resources
+json2pojo.fotmob.baseOutputPath=src/main/java
+json2pojo.fotmob.baseInputFile=fotmob/player-schema.json
